--- a/amplify.yml
+++ b/amplify.yml
@@ -4,10 +4,11 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm ci
+            - corepack enable
+            - pnpm install --frozen-lockfile
         build:
           commands:
-            - npm run build
+            - pnpm run build
       artifacts:
         baseDirectory: .output/public
         files:
