--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,11 @@ applications:
         build:
           commands:
             - pnpm run build
+        postBuild:
+          commands:
+            - echo "NUXT_APP_ENV=$NUXT_APP_ENV" >> .amplify-hosting/compute/default/.env
+            - echo "NUXT_API_BASE=$NUXT_API_BASE" >> .amplify-hosting/compute/default/.env
+            - echo "NUXT_OPENAI_API_KEY=$NUXT_OPENAI_API_KEY" >> .amplify-hosting/compute/default/.env
       artifacts:
         baseDirectory: .output/public
         files:
