--- a/amplify.yml
+++ b/amplify.yml
@@ -1,30 +1,24 @@
 version: 1
-backend:
-  phases:
-    build:
-      commands:
-        - "# Execute Amplify CLI with the helper script"
-        - amplifyPush --simple
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - corepack enable
-        - pnpm install --frozen-lockfile
-    build:
-      commands:
-        - pnpm run build
-    postBuild:
-      commands:
-        - echo "NUXT_APP_ENV=$NUXT_APP_ENV" >> .output/public/_env.json
-        - echo "NUXT_API_BASE=$NUXT_API_BASE" >> .output/public/_env.json
-        - echo "NUXT_OPENAI_API_KEY=$NUXT_OPENAI_API_KEY" >> .output/public/_env.json
-  artifacts:
-    baseDirectory: .output
-    files:
-      - "**/*"
-  cache:
-    paths:
-      - node_modules/**/*
-      - .nuxt/**/*
-      - .output/**/*
+applications:
+  - frontend:
+      phases:
+        preBuild:
+          commands:
+            - corepack enable
+            - pnpm install --frozen-lockfile
+        build:
+          commands:
+            - pnpm run build
+        postBuild:
+          commands:
+            - echo "NUXT_APP_ENV=$NUXT_APP_ENV" >> $CODEBUILD_SRC_DIR/.output/public/.env
+            - echo "NUXT_API_BASE=$NUXT_API_BASE" >> $CODEBUILD_SRC_DIR/.output/public/.env
+            - echo "NUXT_OPENAI_API_KEY=$NUXT_OPENAI_API_KEY" >> $CODEBUILD_SRC_DIR/.output/public/.env
+      artifacts:
+        baseDirectory: .output/public
+        files:
+          - "**/*"
+      cache:
+        paths:
+          - node_modules/**/*
+    appRoot: .
