feat: update CSS theming and validation settings; refactor app configuration to use main.css theme colors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,13 @@
   },
   "editor.quickSuggestions": {
     "strings": "on"
-  }
+  },
+  "css.validate": true,
+  "css.lint.unknownVendorPrefixes": "ignore",
+  "css.lint.validProperties": [],
+  "color-highlight.enable": true,
+  "color-highlight.markers": {
+    "enabled": true
+  },
+  "color-highlight.languages": ["css", "vue", "html"]
 }
