--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ applications:
       phases:
         preBuild:
           commands:
+            - nvm install 22
             - nvm use 22
             - corepack enable
             - pnpm install --frozen-lockfile
