--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9.31.0",
     "nuxt": "^4.0.0",
     "ollama-ai-provider": "1.2.0",
+    "uuid": "^11.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
