--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "nuxt:analyze": "npx nuxt analyze",
+    "nuxt:cleanup": "npx nuxt cleanup",
+    "nuxt:info": "npx nuxt info",
+    "nuxt:upgrade": "npx nuxt upgrade"
   },
   "dependencies": {
     "@ai-sdk/openai": "1.2.0",
