--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --prefer-offline
 
+      - name: Make build script executable
+        run: chmod +x scripts/build.sh
+
       - name: Linting
         run: pnpm lint
         env:
@@ -37,3 +40,12 @@ jobs:
         run: pnpm type-check
         env:
           CI: true
+
+      - name: Build
+        run: ./scripts/build.sh
+        env:
+          CI: true
+          # Cloudflare KV variables (optional - script will handle if not set)
+          NUXT_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.NUXT_CLOUDFLARE_ACCOUNT_ID }}
+          NUXT_CLOUDFLARE_API_TOKEN: ${{ secrets.NUXT_CLOUDFLARE_API_TOKEN }}
+          NUXT_CLOUDFLARE_NAMESPACE_ID: ${{ secrets.NUXT_CLOUDFLARE_NAMESPACE_ID }}
