--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,13 @@
-name: ci
-
-on:
-  push:
-    branches: ["master"]
-  pull_request:
-    branches: ["master"]
-
 jobs:
   ci:
     runs-on: ubuntu-latest
+
+    env:
+      NODE_ENV: production
+      CI: true
+      NUXT_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.NUXT_CLOUDFLARE_ACCOUNT_ID }}
+      NUXT_CLOUDFLARE_API_TOKEN: ${{ secrets.NUXT_CLOUDFLARE_API_TOKEN }}
+      NUXT_CLOUDFLARE_NAMESPACE_ID: ${{ secrets.NUXT_CLOUDFLARE_NAMESPACE_ID }}
 
     steps:
       - name: Checkout code
@@ -30,10 +29,6 @@ jobs:
 
       - name: Linting
         run: pnpm lint
-        env:
-          CI: true
 
       - name: Type checking
         run: pnpm type-check
-        env:
-          CI: true
