--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,11 @@
+name: ci
+
+on:
+  push:
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -29,6 +37,10 @@ jobs:
 
       - name: Linting
         run: pnpm lint
+        env:
+          CI: true
 
       - name: Type checking
         run: pnpm type-check
+        env:
+          CI: true
