--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@ai-sdk/openai": "1.2.0",
     "@nuxt/eslint": "1.2.0",
+    "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^3.2.0",
     "@nuxtjs/mdc": "^0.17.2",
     "ai": "4.1.51",
