--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:install": "playwright install",
+    "test:e2e:codegen": "playwright codegen",
     "prepare": "husky",
     "pre-commit": "lint-staged"
   },
@@ -53,6 +59,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@playwright/test": "^1.54.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -63,7 +70,8 @@
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.5"
+    "vue-tsc": "^3.0.5",
+    "wait-on": "^8.0.4"
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
