--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,12 +1,5 @@
-name: Setup
-description: Setup Nodejs, pnpm and install dependencies
-
-inputs:
-  node-version:
-    description: Nodejs version to install
-    required: true
-    default: 22.x
-
+name: 'Setup Environment'
+description: 'Setup Node.js, pnpm and install dependencies'
 runs:
   using: 'composite'
   steps:
@@ -18,14 +11,15 @@ runs:
       with:
         version: 8
 
-    - name: Use Node.js
+    - name: Use Node.js 22.x
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ inputs.node-version }}
+        node-version: 22.x
         cache: 'pnpm'
 
     - name: Install dependencies
       run: pnpm install --frozen-lockfile --prefer-offline
+      shell: bash
 
     - name: Cache test results
       uses: actions/cache@v4
