--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,20 +1,24 @@
 name: 'Setup Environment'
 description: 'Setup Node.js, pnpm and install dependencies'
+
+inputs:
+  node-version:
+    description: Node.js version
+    required: false
+    default: '22'
+
 runs:
   using: 'composite'
   steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
     - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
         version: 8
 
-    - name: Use Node.js 22.x
+    - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 22.x
+        node-version: ${{ inputs.node-version }}.x
         cache: 'pnpm'
 
     - name: Install dependencies
