--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Linting
         run: pnpm lint
@@ -26,6 +28,8 @@ jobs:
   type-check:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Type checking
         run: pnpm type-check
@@ -35,6 +39,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Run tests
         run: pnpm test:run
@@ -44,6 +50,8 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Run tests with coverage
         run: pnpm test:coverage
@@ -53,6 +61,8 @@ jobs:
   playwright-install:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Install Playwright browsers
         run: pnpm test:e2e:install
@@ -63,6 +73,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [playwright-install]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Start development server
         run: pnpm dev &
@@ -83,6 +95,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Build application
         run: pnpm build
@@ -93,6 +107,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [coverage]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
