chore: update ci

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,9 +1,9 @@
-name: 'Setup Environment'
+name: 'Setup'
 description: 'Setup Node.js, pnpm and install dependencies'
 
 inputs:
   node-version:
-    description: Node.js version
+    description: 'Node.js version'
     required: false
     default: '22'
 
