--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,67 +15,115 @@ env:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
-      - name: Linting
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
+      - name: Lint code
         run: pnpm lint
         env:
           CI: true
 
   type-check:
+    name: Type Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
-      - name: Type checking
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
+      - name: Type check
         run: pnpm type-check
         env:
           CI: true
 
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
-      - name: Run tests
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
+      - name: Run unit tests
         run: pnpm test:run
         env:
           CI: true
 
   coverage:
+    name: Coverage
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
       - name: Run tests with coverage
         run: pnpm test:coverage
         env:
           CI: true
 
   playwright-install:
+    name: Install Playwright
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
       - name: Install Playwright browsers
         run: pnpm test:e2e:install
         env:
           CI: true
 
   e2e:
+    name: E2E Tests
     runs-on: ubuntu-latest
     needs: [playwright-install]
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
       - name: Start development server
         run: pnpm dev &
         env:
@@ -93,23 +141,39 @@ jobs:
           BASE_URL: http://localhost:3000
 
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
       - name: Build application
         run: pnpm build
         env:
           CI: true
 
   upload-coverage:
+    name: Upload Coverage
     runs-on: ubuntu-latest
     needs: [coverage]
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
+        with:
+          fetch-depth: 2
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          node-version: '22'
+
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
         with:
