--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,156 +1,267 @@
 name: ci
+
 on:
   push:
     branches: ['master']
   pull_request:
     branches: ['master']
+
 env:
   NODE_ENV: production
   CI: true
   NUXT_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.NUXT_CLOUDFLARE_ACCOUNT_ID }}
   NUXT_CLOUDFLARE_API_TOKEN: ${{ secrets.NUXT_CLOUDFLARE_API_TOKEN }}
   NUXT_CLOUDFLARE_NAMESPACE_ID: ${{ secrets.NUXT_CLOUDFLARE_NAMESPACE_ID }}
+
 jobs:
-  lint:
-    name: Lint
+  setup:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
-      - name: Lint code
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
+      - name: Cache test results
+        uses: actions/cache@v4
+        with:
+          path: coverage/
+          key: ${{ runner.os }}-coverage-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-coverage-
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: [setup]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
+      - name: Linting
         run: pnpm lint
         env:
           CI: true
+
   type-check:
-    name: Type Check
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
-      - name: Type check
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
+      - name: Type checking
         run: pnpm type-check
         env:
           CI: true
+
   test:
-    name: Test
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
-      - name: Run unit tests
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
+      - name: Run tests
         run: pnpm test:run
         env:
           CI: true
+
   coverage:
-    name: Coverage
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
       - name: Run tests with coverage
         run: pnpm test:coverage
         env:
           CI: true
+
   playwright-install:
-    name: Install Playwright
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
       - name: Install Playwright browsers
         run: pnpm test:e2e:install
         env:
           CI: true
+
   e2e:
-    name: E2E Tests
     runs-on: ubuntu-latest
-    needs: [playwright-install]
+    needs: [setup, playwright-install]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
       - name: Start development server
         run: pnpm dev &
         env:
           CI: true
+
       - name: Wait for server
         run: npx wait-on http://localhost:3000
         env:
           CI: true
+
       - name: Run E2E tests
         run: pnpm test:e2e
         env:
           CI: true
           BASE_URL: http://localhost:3000
+
   build:
-    name: Build
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
       - name: Build application
         run: pnpm build
         env:
           CI: true
+
   upload-coverage:
-    name: Upload Coverage
     runs-on: ubuntu-latest
     needs: [coverage]
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 2
-      - name: Setup
-        uses: ./.github/actions/setup
+          version: 8
+
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: 22.x
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --prefer-offline
+
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
+
   quality-gate:
     runs-on: ubuntu-latest
     needs: [lint, type-check, test, coverage, e2e, build]
