chore: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI/CD Pipeline
 
 on:
   push:
@@ -15,157 +15,113 @@ env:
   NUXT_CLOUDFLARE_NAMESPACE_ID: ${{ secrets.NUXT_CLOUDFLARE_NAMESPACE_ID }}
 
 jobs:
+  # ========================================
+  # QUALITY CHECKS
+  # ========================================
+
   lint:
+    name: 🔍 Lint Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
-
-      - name: Run linting
-        run: pnpm lint
+      - run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
+      - run: pnpm lint
 
   type-check:
+    name: 🔧 Type Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
+      - run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
+      - run: pnpm type-check
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
-
-      - name: Run type checking
-        run: pnpm type-check
+  # ========================================
+  # TESTING
+  # ========================================
 
   test:
+    name: 🧪 Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
-
-      - name: Run tests
-        run: pnpm test:run
+      - run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
+      - run: pnpm test:run
 
   coverage:
+    name: 📊 Test Coverage
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
-
-      - name: Run tests with coverage
-        run: pnpm test:coverage
-
-      - name: Upload coverage to artifacts
-        uses: actions/upload-artifact@v4
+      - run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
+      - run: pnpm test:coverage
+      - uses: actions/upload-artifact@v4
         with:
           name: coverage-reports
           path: coverage/
           retention-days: 7
 
   e2e:
+    name: 🌐 E2E Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
-
-      - name: Install Playwright browsers
-        run: pnpm test:e2e:install
-
-      - name: Build application for E2E
-        run: pnpm build
-
-      - name: Start application
+      - run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
+      - run: pnpm test:e2e:install
+      - run: pnpm build
+      - name: Start Preview Server
         run: |
           pnpm preview &
           echo $! > .preview-pid
         env:
           PORT: 3000
-
-      - name: Wait for server
-        run: |
-          npx wait-on http://localhost:3000 --timeout 60000
-
-      - name: Run E2E tests
-        run: pnpm test:e2e
+      - name: Wait for Server
+        run: npx wait-on http://localhost:3000 --timeout 60000
+      - run: pnpm test:e2e
         env:
           BASE_URL: http://localhost:3000
-
-      - name: Stop application
+      - name: Cleanup Server
         if: always()
         run: |
           if [ -f .preview-pid ]; then
             kill $(cat .preview-pid) || true
             rm .preview-pid
           fi
-
-      - name: Upload E2E artifacts
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: e2e-artifacts
@@ -174,31 +130,25 @@ jobs:
             playwright-report/
           retention-days: 7
 
+  # ========================================
+  # BUILD & DEPLOY
+  # ========================================
+
   build:
+    name: 🏗️ Build Application
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
-
-      - name: Build application
-        run: pnpm build
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts
+      - run: pnpm build
+      - uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
           path: |
@@ -207,54 +157,64 @@ jobs:
             .nuxt/
           retention-days: 7
 
+  # ========================================
+  # REPORTING
+  # ========================================
+
   upload-coverage:
+    name: 📈 Upload Coverage
     runs-on: ubuntu-latest
     needs: [coverage]
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download coverage artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
           name: coverage-reports
           path: coverage/
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: coverage/
           fail_ci_if_error: false
           verbose: true
 
+  # ========================================
+  # QUALITY GATE
+  # ========================================
+
   quality-gate:
+    name: 🎯 Quality Gate
     runs-on: ubuntu-latest
     needs: [lint, type-check, test, coverage, e2e, build]
     if: always()
     steps:
-      - name: Check job results
+      - name: Check Results
         run: |
-          echo "Job Results:"
-          echo "- Lint: ${{ needs.lint.result }}"
-          echo "- Type Check: ${{ needs.type-check.result }}"
-          echo "- Test: ${{ needs.test.result }}"
-          echo "- Coverage: ${{ needs.coverage.result }}"
-          echo "- E2E: ${{ needs.e2e.result }}"
-          echo "- Build: ${{ needs.build.result }}"
+          echo "🚀 CI/CD Pipeline Results:"
+          echo "=========================="
+          echo "🔍 Lint: ${{ needs.lint.result }}"
+          echo "🔧 Type Check: ${{ needs.type-check.result }}"
+          echo "🧪 Unit Tests: ${{ needs.test.result }}"
+          echo "📊 Coverage: ${{ needs.coverage.result }}"
+          echo "🌐 E2E Tests: ${{ needs.e2e.result }}"
+          echo "🏗️ Build: ${{ needs.build.result }}"
+          echo "=========================="
 
-          if [[ "${{ needs.lint.result }}" == "failure" || 
-                "${{ needs.type-check.result }}" == "failure" || 
-                "${{ needs.test.result }}" == "failure" || 
-                "${{ needs.coverage.result }}" == "failure" || 
-                "${{ needs.e2e.result }}" == "failure" || 
-                "${{ needs.build.result }}" == "failure" ]]; then
-            echo "❌ Quality gate failed!"
+          # Check for failures
+          failed_jobs=()
+          [[ "${{ needs.lint.result }}" == "failure" ]] && failed_jobs+=("Lint")
+          [[ "${{ needs.type-check.result }}" == "failure" ]] && failed_jobs+=("Type Check")
+          [[ "${{ needs.test.result }}" == "failure" ]] && failed_jobs+=("Unit Tests")
+          [[ "${{ needs.coverage.result }}" == "failure" ]] && failed_jobs+=("Coverage")
+          [[ "${{ needs.e2e.result }}" == "failure" ]] && failed_jobs+=("E2E Tests")
+          [[ "${{ needs.build.result }}" == "failure" ]] && failed_jobs+=("Build")
+
+          if [ ${#failed_jobs[@]} -gt 0 ]; then
+            echo "❌ Quality Gate Failed!"
+            echo "Failed jobs: ${failed_jobs[*]}"
             exit 1
           else
-            echo "✅ All checks passed successfully!"
-            echo "📊 Test coverage generated"
-            echo "🔍 Code quality validated"
-            echo "🏗️ Build completed successfully"
+            echo "✅ Quality Gate Passed!"
+            echo "🎉 All checks completed successfully!"
           fi
